[package]
name = "tetragrammaton"
version = "0.1.0"
edition = "2021" # ← Usa 2021 porque 2024 aún no es oficial ni estable para crates.io
authors = ["suiGn <admin@neurons.me>"]
description = "A Rust-based system daemon with FUSE, HTTP, and async orchestration for advanced identity logic."
license = "MIT"
repository = "https://github.com/neurons-me/tetragrammaton"
readme = "README.md"
keywords = ["fuse", "filesystem", "identity", "axum", "daemon"]
categories = ["filesystem", "os::linux-apis", "network-programming", "command-line-utilities"]

[dependencies]
fuse = "0.5"
libc = "0.2"
time = "0.3"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"